# Voice-Notepad-V3

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASKS-COMPLETE.md  build-all.sh  build-appimage.sh  build-local.sh  build-tarball.sh  build.sh  changelog.md  install-dev-launcher.sh  local-build.sh  mkdocs.yml  models.md  package-lock.json  package.json  pricinglogic.md  pyproject.toml  release.sh  requirements.txt  run.sh  test_prompt_stacks.py  uninstall-dev-launcher.sh
.claude/: settings.local.json
.claude/agents/: code-cleanup-reviewer.md  docs-sync-manager.md  release-manager.md  repo-organizer.md  ui-ux-reviewer.md
.claude/commands/: add-feature-plan.md  transcribe-voice-notes.md
.github/workflows/: release.yml
app/: requirements.txt
app/src/: about_widget.py  analysis_widget.py  analytics_widget.py  audio_feedback.py  audio_processor.py  audio_recorder.py  config.py  cost_tracker.py  cost_widget.py  database.py  database_mongo.py  embedding_store.py  embeddings.py  favorites_bar.py  file_transcription_widget.py  file_transcription_window.py  history_widget.py  history_window.py  hotkeys.py  main.py  markdown_widget.py  mic_naming_ai.py  mic_test_widget.py  (+19 more)
archive/: README.md
docs/: audio-pipeline.md  configuration.md  cost-tracking.md  features.md  hotkey-setup.md  index.md  installation.md  models.md  screenshots.md  shortcuts.md  stack.md  text-injection.md  troubleshooting.md  usage.md
idea-notes/: idea-edited.md  idea-raw.md
planning/: general-notes.md
project-planner/: README.md
ref/: ref.md
scripts/: build-deb.sh  generate_tts_assets.sh  setup-text-injection.sh  update-build.sh
src/: config.py  hotkeys.py  main.py
tasks/: README.md  build  clean  dev  dev-install  install  release  test
testing/: basic-cleaned.md  composite-pricing.csv  raw-transcript.md
(+29 files in other folders)
