[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-notepad"
version = "1.7.3"
description = "Voice recording with AI-powered transcription and cleanup"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel Rosehill", email = "public@danielrosehill.com"}
]
keywords = ["voice", "transcription", "ai", "speech-to-text", "gemini", "openai", "mistral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "PyQt6>=6.6.0",
    "pyaudio>=0.2.14",
    "google-genai>=1.0.0",
    "openai>=1.40.0",
    "mistralai>=1.0.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.0; python_version>='3.13'",
    "markdown>=3.5.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
voice-notepad = "src.main:main"

[project.gui-scripts]
voice-notepad-gui = "src.main:main"

[project.urls]
Homepage = "https://github.com/danielrosehill/Voice-Notepad-V3"
Repository = "https://github.com/danielrosehill/Voice-Notepad-V3"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
